--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,12 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -57,12 +63,18 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #f3f7fe;
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background: #697e8e;
+    color: #f3f7fe;
+    box-shadow: 0 0 2px black;
+    border: none;
+  }
+  button:hover {
+    background-color: #8aa5b9;
   }
 }
